# matfusion

./: .gitignore  .gitmodules  LICENSE.txt  README.md  environment.yml  eval.py  matfusion_diffusers_flash_demo.ipynb  matfusion_jax_demo.ipynb  matfusion_jax_flash_demo.ipynb  score.py  train.py  view_eval.ipynb
dataloader_rs/: Cargo.toml
dataloader_rs/src/: form.rs  gen.rs  ids.rs  lib.rs  loaders.rs  warp.rs
datasets/: real_test_look-ahead.yml  real_test_lookahead.yml  real_test_materialgan.yml  test_rasterized.yml  test_rendered_sunny_env.yml  test_rendered_sunny_fnf.yml  train_rasterized.yml  train_rendered_env.yml  train_rendered_fnf.yml
matfusion_jax/: config.py  model.py  nprast.py  pipeline.py  vis.py
matfusion_jax/net/: mine.py  resnet.py
scripts/: compress_exrs.jl  convert_inria.py  convert_to_diffusers.py  convert_to_ocb.py  integrate-normals.jl  modetxt2json.py  prune_checkpoint.py  prune_checkpoint_ema.py  prune_checkpoint_noema.py
scripts/render_synthetic/: .gitignore  nogi_render_template.blend  ortho_render_control.py  ortho_render_template.blend  render_control.py  render_template.blend
