[package]
name = "matfusion-dataloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "data"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.70"
cgmath = { version = "0.18.0", features = ["rand", "serde"] }
crossbeam-channel = "0.5.8"
image = "0.24.6"
kdtree = "0.7.0"
map-macro = "0.2.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-linalg = { version = "0.16.0", optional=true, features = ["openblas-static"] }
numpy = "0.18.0"
pyo3 = { version = "0.18.2", features = ["anyhow", "extension-module", "serde"] }
pythonize = "0.18.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.159", features = ["derive"] }
argh = "0.1.10"
exr = "1.6.3"
indicatif = "0.17.3"
serde_json = "1.0.96"
rayon = "1.7.0"
serde_yaml = "0.9.27"

[profile.release]
debug = true
